--- a/index.html
+++ b/index.html
@@ -7,22 +7,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eternals Disney</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type= "text/css" href="style.css">
 </head>
 <body>
-    <section class}="banner">
+    <section class="banner">
         <div class="box content">
             <header>
                 <a href="#" class="logo"> <img src="/imagenes/logo.png"> </a>
                 <ul>
                     <li> <a href="#">Disney+</a></li>
                     <li> <a href="#">More</a></li>
-                    <p>prueba</p>
                 </ul>
             </header>
+            <div class="contentBox">
+                <img src="/imagenes/eternals.png">
+                <p>When you love something, you fight for it.</p>
+                <a href="#" class="btn">Stream Now</a>
+            </div>
+            <ul class="sci">
+                <h3>Follow us on</h3>
+                <li><a href="#"><img src="/imagenes/twitter.png"></a></li>
+                <li><a href="#"><img src="/imagenes/instagram.png"></a></li>
+            </ul>
         </div>
         <div class="box images">
-            
+            <div class="imgBx">
+                <img src="/imagenes/img1.jpg">
+            </div>
+            <div class="imgBx">
+                <img src="/imagenes/img2.jpg">
+            </div>
+            <div class="imgBx">
+                <img src="/imagenes/img3.jpg">
+            </div>
         </div>
     </section>
 </body>
