--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta name="description" content="Los Eternos son una raza de seres inmortales con poderes sobrehumanos que han vivido en secreto en la Tierra durante miles de años. Aunque nunca han intervenido en el destino de la población, ahora una amenaza se cierne sobre la humanidad.">
-    <meta property="og:image" content="/eternals.png" />
+    <meta property="og:image" content="imagenes/eternals.png" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,32 +13,32 @@
     <section class="banner">
         <div class="box content">
             <header>
-                <a href="#" class="logo"> <img src="/imagenes/logo.png"> </a>
+                <a href="#" class="logo"> <img src="imagenes/logo.png"> </a>
                 <ul>
                     <li> <a href="#">Disney+</a></li>
                     <li> <a href="#">More</a></li>
                 </ul>
             </header>
             <div class="contentBox">
-                <img src="/imagenes/eternals.png">
+                <img src="imagenes/eternals.png">
                 <p>When you love something, you fight for it.</p>
                 <a href="#" class="btn">Stream Now</a>
             </div>
             <ul class="sci">
                 <h3>Follow us on</h3>
-                <li><a href="#"><img src="/imagenes/twitter.png"></a></li>
-                <li><a href="#"><img src="/imagenes/instagram.png"></a></li>
+                <li><a href="#"><img src="imagenes/twitter.png"></a></li>
+                <li><a href="#"><img src="imagenes/instagram.png"></a></li>
             </ul>
         </div>
         <div class="box images">
             <div class="imgBx">
-                <img src="/imagenes/img1.jpg">
+                <img src="imagenes/img1.jpg">
             </div>
             <div class="imgBx">
-                <img src="/imagenes/img2.jpg">
+                <img src="imagenes/img2.jpg">
             </div>
             <div class="imgBx">
-                <img src="/imagenes/img3.jpg">
+                <img src="imagenes/img3.jpg">
             </div>
         </div>
     </section>
